--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -91,6 +91,8 @@ ol {
     max-width: 80em;
     width: 80vw;
     margin: auto;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 // Links
@@ -121,4 +123,11 @@ a.nav-link {
 img {
     max-width: 100%;
     height: auto;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 90vw;
+    padding: 0 1rem;
+  }
 }
